--- a/views/parts/page.html
+++ b/views/parts/page.html
@@ -11,7 +11,7 @@
         <link href="https://fonts.googleapis.com/css2?family=Flow+Block&family=Roboto:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
 
         
-        <link rel="stylesheet" href="views/assets/css/reset.css">
+        <link rel="stylesheet" href="assets/css/reset.css">
         <link rel="stylesheet" href="assets/css/styles.css">
     </head>
     <body>
