--- a/views/home.html
+++ b/views/home.html
@@ -1,7 +1,99 @@
 {{ define "content" }}
 <div>
-    <p>This is my first go htmx website, let's see how this goes!</p>
-    <p>{{ .HTML }}</p>
+    <h1>TL;DR</h1>
+    <div class="row gutters">
+        <div class="col-6">
+            <p>Hey, my name is Nick. I'm a web engineer with more than 7 years experience building
+            everything from small websites to applications used to handle events for The Home Depot.</p>
+            <p>If you would like more information or have any questions please feel free to contact me.</p>
+            <a class="button" href="/contact" target="_blank">Contact</a>
+        </div>
+        <div class="col-6">
+            <p>I'm adept at the following languages, frameworks and tools:</p>
+            <ul>
+                <li>Go</li>
+                <li>Angular | Typescript | Javascript</li>
+                <li>WordPress | Woocommerce | PHP</li>
+                <li>MySQL</li>
+                <li>Docker</li>
+                <li>Git | Github</li>
+            </ul>
+        </div>
+    </div>
+    <p>BTW this site and that contact form is built using Go and HTMX(the GoHt stack???). So if
+    you would like to see how it's built or if you would like to see what I've been working
+    on recently, check out my github at
+    <a href="https://github.com/NAdams3" target="_blank">https://github.com/NAdams3</a></p>
+    <div class="joke">
+        <h1>Early Childhood</h1>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+        incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation
+        ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in
+        reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur
+        sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id
+        est laborum.</p>
+        <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium
+        doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis
+        et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia
+        voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos
+        qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia
+        dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora
+        incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima
+        veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut
+        aliquid ex ea commodi consequatur? Quis autem vel eum iure reprehenderit qui in ea
+        voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum
+        fugiat quo voluptas nulla pariatur?</p>
+        <p>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis
+        praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias
+        excepturi sint occaecati cupiditate non provident, similique sunt in culpa qui
+        officia deserunt mollitia animi, id est laborum et dolorum fuga. Et harum quidem
+        rerum facilis est et expedita distinctio. Nam libero tempore, cum soluta nobis est
+        eligendi optio cumque nihil impedit quo minus id quod maxime placeat facere possimus,
+        omnis voluptas assumenda est, omnis dolor repellendus. Temporibus autem quibusdam et
+        aut officiis debitis aut rerum necessitatibus saepe eveniet ut et voluptates
+        repudiandae sint et molestiae non recusandae. Itaque earum rerum hic tenetur a
+        sapiente delectus, ut aut reiciendis voluptatibus maiores alias consequatur aut
+        perferendis doloribus asperiores repellat.</p>
+    </div>
+    <p class="punch-line">Well let's not go back that far.</p>
+    <h1>Work</h1>
+    <p>In 2016 I started working for a local web development company, Polyglot Labs. By 2019 I 
+    had moved to the backend team to work larger web applications using Go for backend and Angular
+    for the frontend.</p>
+    <p>My first project was for a local wrecker company. They needed a replacement for 3 of their
+    much older software systems. Our company's goal was to combine the replacements for these systems
+    into one web application. The project was quoted and they let me loose to build it, sink or swim.
+    I spent multiple months working directly with that client, sometimes going to their place of
+    business to get insights and understanding of their work flow so that I could build those things
+    into this new application. The day after the application was deployed, I went back and fixed 
+    bugs and handled some quality of life changes in realtime, re-deploying from my laptop.</p>
+    <p>Immediatly after that project was stable, I was moved onto the team that was making Product
+    Walk, an application made to manage the Product Event for The Home Depot. Soon after that application
+    was launched our team lead left the company and I was chosen as his replacement. My most notable
+    contribution to this project was building a way to use this one app for multiple concurrent events.
+    A year or so after the original project was launched, the client asked us to make a modified version
+    to handle another similar event. Our team decided that the most reliable way to handle that was
+    to add individual event settings to database instead of forking the app.</p>
+
+    <h1>Projects of Note</h1>
+    <div class="row gutters">
+        <div class="col-6">
+            <h2>Product Walk | THDPLR</h2>
+        </div>
+        <div class="col-6">
+            <h2>Standard Event Rentals</h2>
+        </div>
+    </div>
+
+    <div class="row gutters">
+        <div class="col-6">
+            <h2>CMP</h2>
+        </div>
+        <div class="col-6">
+            <h2>Orb</h2>
+        </div>
+    </div>
+
 </div>
 {{ end }}
 
