--- a/views/parts/page.html
+++ b/views/parts/page.html
@@ -6,20 +6,27 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="ie-edge">
         <title>{{ .Header.Title }}</title>
+
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Flow+Block&family=Roboto:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
-
+        <link href="https://fonts.googleapis.com/css2?family=Electrolize&family=Roboto:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
         
         <link rel="stylesheet" href="assets/css/reset.css">
         <link rel="stylesheet" href="assets/css/styles.css">
     </head>
     <body>
+        <div class="header">
+            <div class="logo">
+                <a href="/">
+                    <span class="electrolize">B<span class="show-on-hover">L0CK4D</span>3</span><span>.dev()</span>
+                </a>
+            </div>
+        </div>
         <div class="wrapper">
             {{ template "content" .Content }}
         </div>
         <div class="footer">
-            <p>copyright year {{ .Footer.Year }}</p>
+            <span>Copyright &copy; {{ .Footer.Year }} BLOCKADE.dev. All rights reserved.</span>
         </div>
     </body>
 </html>
