--- a/views/parts/page.html
+++ b/views/parts/page.html
@@ -28,6 +28,7 @@
         <div class="footer">
             <span>Copyright &copy; {{ .Footer.Year }} BLOCKADE.dev. All rights reserved.</span>
         </div>
+        <script src="https://unpkg.com/htmx.org@1.9.11"></script>
     </body>
 </html>
 {{ end }}
